# nanobot-soulboard

./: .gitignore  .gitmodules  .tmuxp.yaml  AGENTS.md  Caddyfile  README.md  pyproject.toml  recreate_tmux_session.sh  soulboard.service  sync.sh
ext-services/: README.md  docker-compose.yml
ext-services/litellm_proxy/: litellm_config.yaml
frontend/: .env.example  .gitignore  index.html  package.json  pnpm-lock.yaml  tsconfig.node.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  markdown.ts  styles.css  types.ts  vite-env.d.ts
frontend/src/components/: CloneSoulPage.tsx  CreateSoulDialog.tsx  GroupListEditor.tsx  MarkdownMessage.tsx
frontend/src/components/registries/: CronJobRegistryDialog.tsx  McpServersDialog.tsx  SkillPoolsDialog.tsx
frontend/src/lib/: api.ts  drafts.ts  errors.ts  format.ts  sessionWindows.ts  urlFocus.ts
nanobot_soulboard/: __init__.py  __main__.py  chat_streams.py  config.py  context.py  cron.py  providers.py  runtime.py  schemas.py  server.py  shell_tools.py  skills.py
nanobot_soulboard/agent/: __init__.py  loop.py  shell.py  supervisor.py
tests/: test_server.py  test_soulboard_runtime.py  test_soulboard_streaming.py
