[project]
name = "nanobot-soulboard"
dynamic = ["version"]
description = "Single-process runtime management for multiple nanobot souls"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "nanobot-ai",
    "pytest-asyncio>=1.3.0",
    "uvicorn>=0.32.0,<1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0,<9.0.0",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["nanobot_soulboard"]

[tool.hatch.build.targets.sdist]
include = [
    "README.md",
    "nanobot_soulboard/",
    "tests/",
    "pyproject.toml",
]

[tool.uv.sources]
nanobot-ai = { path = "nanobot", editable = true }
